[package]
name = "rusty_tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blue_engine = "0.5.8"
rand = "0.9.0-alpha.0"
serde_json = "=1.0.1"
serde = { version = "1.0.197", features = ["derive"] }
chrono = "0.4.38"
leptos = { version = "0.6.12", features = ["csr"] }
console_error_panic_hook = "0.1.7"

